# zorkell

./: .gitignore  .travis.yml  dump.sh  hs-chip8.cabal  stack.yaml  t.bat  tf.bat  zorkell.cabal
app/: Main.hs
src/: BinReader.hs  BinUtils.hs  Dictionary.hs  Header.hs  Lib.hs  ObjectTable.hs  OpCodes.hs  Types.hs  ZString.hs
test/: BinReaderSpec.hs  DictionarySpec.hs  ObjectTableSpec.hs  OpCodesSpec.hs  Spec.hs  StorySpec.hs  Utils.hs  ZStringSpec.hs
