name:                zorkell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/theor/zorkell#readme
license:             BSD3
license-file:        LICENSE
author:              theor
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,Types,Header,ZString,BinUtils,OpCodes,Dictionary, ObjectTable
  -- other-modules:
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , binary-strict
                     , bytestring
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-patterns

executable zorkell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , zorkell
                     , bytestring
  ghc-options:         -fwarn-incomplete-patterns

test-suite zorkell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zorkell
                     , hspec
                     , QuickCheck
                     , vector
                     , bytestring
                     , binary-strict
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
  default-language:    Haskell2010
